SOLR-14209: specify charset via String for Java 8.